--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,23 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+
+# Prisma generated files
+/app/generated/
+prisma/dev.db
+prisma/dev.db-shm
+prisma/dev.db-wal
+
+# Local development
+.turbo/
+dist/
+
